# timer

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  Makefile  README.md  example.py  pyproject.toml  pytest.ini
tests/: __init__.py  test_timer.py
timer/: __init__.py
timer/utils/: helpers.py  logger.py
