[tool.poetry]
name = "timer"
version = "0.1.0"
description = "This project provides a method for determining how long it takes a function to complete its execution."
authors = ["harerakalex <hareraloston@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
